# StemsAbletonv2

./: AGENTS.md  LICENSE  QUICKSTART.md  Stems.spec  build_app.sh  c4milo_stems.py  pyproject.toml  requirements.txt  run_ui.py  run_ui.spec
.history/: .gitignore_20260505071608
assets/logo/: stems-tower.icns
stems/: __init__.py  ableton.py  automation.py  cli.py  detection.py  errors.py  export.py  logging_setup.py  login_item.py  models.py  naming.py  osc.py  preferences.py  preflight.py  project.py  reporting.py  state.py
stems/ui/: app.py  main_window.py  preferences_dialog.py  theme.py  worker.py
tests/: test_automation.py  test_detection.py  test_export.py  test_login_item.py  test_main_window.py  test_naming.py  test_packaging.py  test_preferences.py  test_project.py  test_reporting.py  test_state.py
