[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stems-ableton"
version = "0.1.0"
description = "Ableton stem export backend and CLI"
readme = "LICENSE"
requires-python = ">=3.11"
dependencies = [
    "python-osc",
    "pyautogui",
    "PySide6",
]

[project.optional-dependencies]
dev = ["pytest", "pyinstaller"]

[project.scripts]
c4milo-stems = "stems.cli:main"
c4milo-stems-ui = "stems.ui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
